--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,19 @@
     <!--  endbower  -->
   </head>
   <body>
-    <ng-view></ng-view>
+    <section id="container">
+      <header>
+        <a href="/"><h1 id="logo">hrbvn</h1></a>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="https://www.instagram.com/shotbyhrbvn/">Instagram</a></li>
+          <li><a href="https://www.flickr.com/hrbvn/">Flickr</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      <ng-view></ng-view>
+    </section>
     <script src="assets/js/main.js" type="text/javascript"></script>
   </body>
 </html>
